# neon-serde

./: Cargo.toml  readme.md
src/: de.rs  errors.rs  lib.rs  macros.rs  ser.rs
test/native/: Cargo.toml
test/native/src/: lib.rs
test_macro/native/src/: lib.rs
