[package]
name = "neon-serde"
version = "0.4.0"
authors = ["Gabriel Castro <dev@GabrielCastro.ca>"]
description = "Easily serialize object for use with neon"
license = "MIT"
repository = "https://github.com/GabrielCastro/neon-serde"
readme = "readme.md"

[dependencies]
serde = "1"
thiserror = "1"
neon = { version = "0.10.0", default-features = false, features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api"] }
neon-runtime = { version = "0.10.0", features = ["napi-6"]}

[dependencies.num]
version = "0.2"
default-features = false

[dev-dependencies]
serde_derive = "1"

[badges]
travis-ci = { repository = "GabrielCastro/neon-serde" }
